<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textSize="@dimen/label_text_size" />

            <EditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_top_morgin"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_top_morgin"
                android:text="@string/password_label"
                android:textSize="@dimen/label_text_size" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_top_morgin"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/default_top_morgin"
                android:text="@string/login_button_lable" />

        </LinearLayout>

    </ScrollView>
</layout>